# minesweeper

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build-portable.bat  build-portable.sh  build.bat  build.sh  demo.bat  emscripten-toolchain.cmake  generate-docs.bat  mainpage.dox  run_web.bat
docs/: _cell_8cpp.html  _cell_8h_source.html  _cell_state_8h_source.html  _color_8h_source.html  _game_8h_source.html  _input_data_8h_source.html  _message_8h_source.html  annotated.html  class_board.html  class_cell.html  class_game-members.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  index.html  main_8cpp.html  shell.html  struct_input_data-members.html  terminal.js  terminal.wasm
docs/html/: _board_8cpp.html  _board_8h_source.html  _cell_content_8h_source.html  _game_8cpp.html  _game_state_8h_source.html  class_board-members.html  class_cell-members.html  class_game.html  classes.html  dir_bf4fd994bd662a0cc6d8dc0037c90b44.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  functions.html  functions_func.html  functions_vars.html  globals_func.html  menudata.js  struct_input_data.html
docs/html/search/: all_11.js  all_2.js  all_3.js  all_4.js  all_9.js  all_b.js  all_c.js  all_f.js  files_0.js  functions_0.js  functions_1.js  functions_7.js  pages_1.js  pages_3.js  pages_5.js  pages_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
docs/search/: all_0.js  all_1.js  all_7.js  all_d.js  all_e.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  pages_2.js  pages_7.js  pages_d.js  pages_e.js  pages_f.js
include/: Board.h  Cell.h  Game.h  InputData.h  Message.h
include/enums/: CellContent.h  CellState.h  Color.h  GameState.h
public/: index.html  styles.css  terminal.js  terminal.wasm
src/: Board.cpp  Cell.cpp  Game.cpp  main.cpp  web_bindings.cpp
tests/: test_basic.cpp
web/: pre.js  shell.html  styles.css
